--- a/_posts/2020-3-19-coding.md
+++ b/_posts/2020-3-19-coding.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: System Response in the Times of Coronavirus
+title: Coding Best Practices
 ---
 
 ## Inner Loop Design Concepts
